--- a/Mobile Status/config.json
+++ b/Mobile Status/config.json
@@ -1,4 +1,4 @@
 {
-    "prefix": "*",
-    "token": "NzkyODU3NjU3OTQ1NjIwNDkw.X-j0PA.meBYlRTExsjYX6E5Y98DInhePP4"
+    "prefix": "YOUR_PREFIX",
+    "token": "YOUR_TOKEN"
 }
